[package]
name = "rustmann"
version = "0.5.2"
authors = ["Ning Sun <sunng@protonmail.com>"]
description = "Rust/Tokio client for Riemann"
license = "MIT/Apache-2.0"
keywords = ["tokio", "riemann", "client"]
repository = "https://github.com/sunng87/rustmann"
readme = "README.md"
edition = "2018"

[features]
tls = ["tokio-rustls", "webpki", "webpki-roots"]

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4", features = ["codec"] }
futures = "0.3.6"
prost = "0.6"
#bytes = "0.6"
derive_builder = "0.9.0"
getset = "0.1.1"
thiserror = "1"
tokio-rustls = { version = "0.21.0", optional = true }
webpki = { version = "0.21", optional = true  }
webpki-roots = { version = "0.21", optional = true }

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
structopt = "0.3.3"
structopt-derive = "0.3.3"
