[package]
name = "rustmann"
version = "0.8.0"
authors = ["Ning Sun <sunng@protonmail.com>"]
description = "Rust/Tokio client for Riemann"
license = "MIT/Apache-2.0"
keywords = ["tokio", "riemann", "client"]
repository = "https://github.com/sunng87/rustmann"
readme = "README.md"
edition = "2018"

[features]
tls = ["tokio-rustls", "webpki-roots", "rustls-pki-types"]

[dependencies]
tokio = { version = "1.0", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3.6"
prost = "0.13"
derive_builder = "0.20"
getset = "0.1.1"
thiserror = "1"
tokio-rustls = { version = "0.26.0", optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = { version = "1.0", optional = true, features = ["alloc"] }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
structopt = "0.3.3"
structopt-derive = "0.4.18"
tokio = { version = "1.0", features = ["full"] }
